--- a/src/components/shared/Button/index.scss
+++ b/src/components/shared/Button/index.scss
@@ -1,3 +1,4 @@
+@use 'sass:map';
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
 
@@ -28,7 +29,7 @@
     @include bg-none;
   }
   &--destructive {
-    color: $red600;
+    color: map.get($color-danger, 600);
     @include border--danger;
   }
   &--with-legend {
@@ -41,7 +42,7 @@
       @include font-size-ui-sssm;
       @include font-weight-light;
       @include line-height-12;
-      color: $gray500;
+      color: var(--gray500);
     }
   }
 
