--- a/src/components/shared/Pill/index.scss
+++ b/src/components/shared/Pill/index.scss
@@ -1,3 +1,4 @@
+@use 'sass:map';
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
 
@@ -25,57 +26,57 @@
   }
 
   &--noun {
-    color: $pill-noun;
+    color: map.get($color-pill, 'noun');
     &:after {
-      background-color: $pill-noun;
+      background-color: map.get($color-pill, 'noun');
     }
   }
   &--pronoun {
-    color: $pill-pronoun;
+    color: map.get($color-pill, 'pronoun');
     &:after {
-      background-color: $pill-pronoun;
+      background-color: map.get($color-pill, 'pronoun');
     }
   }
   &--interjection {
-    color: $pill-interjection;
+    color: map.get($color-pill, 'interjection');
     &:after {
-      background-color: $pill-interjection;
+      background-color: map.get($color-pill, 'interjection');
     }
   }
   &--preposition {
-    color: $pill-preposition;
+    color: map.get($color-pill, 'preposition');
     &:after {
-      background-color: $pill-preposition;
+      background-color: map.get($color-pill, 'preposition');
     }
   }
   &--conjunction {
-    color: $pill-conjunction;
+    color: map.get($color-pill, 'conjunction');
     &:after {
-      background-color: $pill-conjunction;
+      background-color: map.get($color-pill, 'conjunction');
     }
   }
   &--verb {
-    color: $pill-verb;
+    color: map.get($color-pill, 'verb');
     &:after {
-      background-color: $pill-verb;
+      background-color: map.get($color-pill, 'verb');
     }
   }
   &--adverb {
-    color: $pill-adverb;
+    color: map.get($color-pill, 'adverb');
     &:after {
-      background-color: $pill-adverb;
+      background-color: map.get($color-pill, 'adverb');
     }
   }
   &--adjective {
-    color: $pill-adjective;
+    color: map.get($color-pill, 'adjective');
     &:after {
-      background-color: $pill-adjective;
+      background-color: map.get($color-pill, 'adjective');
     }
   }
   &--various {
-    color: $pill-various;
+    color: map.get($color-pill, 'various');
     &:after {
-      background-color: $pill-various;
+      background-color: map.get($color-pill, 'various');
     }
   }
 }
