--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -1,3 +1,4 @@
+@use'sass:map';
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
 
@@ -16,7 +17,7 @@
     bottom: 0;
 
     @include border-radius-full;
-    border: $spacing-px-4 solid $gray500;
+    border: $spacing-px-4 solid map.get($color-gray, 500);
     border-right-color: #fff;
     animation: spinner 1.1s infinite linear;
     content: '';
