--- a/src/components/shared/Textarea/index.scss
+++ b/src/components/shared/Textarea/index.scss
@@ -1,100 +1,13 @@
 @use 'sass:map';
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
+@import 'styles/mixins/index.scss';
 
-.form-group {
-  label,
-  .form-group__validationText {
-    @include font-ui;
-    @include font-weight-regular;
-    @include line-height-16;
-    @include letter-spacing-05;
-
-    text-transform: uppercase;
-  }
-
-  label {
-    display: inline-block;
-    @include margin-b-8;
-
-    @include font-size-ui-sm;
-    color: map.get($color-gray, 800);
-  }
-
-  .form-group__validationText {
-    margin-top: $spacing-px-8;
-
-    @include font-size-ui-ssm;
-    color: map.get($color-gray, 500);
-  }
-
-  .form-textarea {
-    display: block;
-    width: 100%;
-    height: $spacing-px-96;
-    padding: $spacing-px-12 $spacing-px-16;
-    box-sizing: border-box;
-  
-    @include font-content;
-    @include font-weight-regular;
-    @include font-size-content;
-    @include line-height-28;
-    color: map.get($color-gray, 1000);
-    caret-color: map.get($color-gray, 1000);
-    
-    @include border;
-    @include border-radius-sm;
-    background-color: map.get($color-gray, 100);
-    
-    resize: none;
-
-    &::placeholder {
-      color: map.get($color-gray, 500);
-    }
-  
-    &:focus {
-      border-color: map.get($color-gray, 500);
-      outline: none;
-    }
-  }
-
-  &.form-group--has-label {
-    position: relative;
-    
-    .form-group__validationText {
-      position: absolute;
-      right: 0; 
-      top: $spacing-px-2;
-      margin-top: 0;
-    }
-  }
-
-  &.form-group--required {
-    label::after {
-      position: relative;
-      top: -$spacing-px-2;
-      margin-left: $spacing-px-2;
-  
-      color: map.get($color-danger, 600);
-      content: '*';
-    }
-  }
-
-  &.form-group--invalid {
-    .form-group__validationText {
-      color: map.get($color-danger, 500);
-    }
-
-    .form-textarea {
-      color: map.get($color-danger, 700);
-      caret-color: map.get($color-danger, 700);
-
-      @include border--danger;
-      background-color: map.get($color-danger, 50);
-      
-      &:focus {
-        border-color: map.get($color-danger, 500);
-      }
-    }
-  }
+.form-textarea {
+  @include form-control;
+  height: $spacing-px-96;
+  resize: none;
+  @include form-control--placeholder;
+  @include form-control--focus;
+  @include form-control--invalid;  
 }
