--- a/src/components/shared/Container/index.scss
+++ b/src/components/shared/Container/index.scss
@@ -1,8 +1,29 @@
+@use 'sass:map';
+@import 'styles/variables.scss';
+@import 'styles/mixins/index.scss';
+
 .container {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  background: var(--gradient-primary);
+
+  /* Color themes */
+  @include theme-to-custom-properties($color-gray, 'gray');
+  @include theme-to-custom-properties($color-primary, 'primary');
+  
+  &--study {
+    @include theme-to-custom-properties($color-gray--study, 'gray');
+    @include theme-to-custom-properties($color-primary--study, 'primary');
+    @include theme-to-custom-properties($color-gradient--study, 'gradient-');
+  }
+
+  &--search {
+    @include theme-to-custom-properties($color-gray--search, 'gray');
+    @include theme-to-custom-properties($color-primary--search, 'primary');
+    @include theme-to-custom-properties($color-gradient--search, 'gradient-');
+  }  
 }
