--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,10 @@ $spacing-px-192: 24 * $grid-size;
 $spacing-px-256: 32 * $grid-size;
 $spacing-px-384: 48 * $grid-size;
 
+$grid-padding: $spacing-px-20;
+$grid-padding--narrow: $spacing-px-16;
+$grid-optical-compensation: -8.5vh;
+
 // TODO: продолжить с миксинами (бордеры например, на фокус у меня нет миксина)
 
 /*
