+ form-input--rounded, form-input--font-ui modifiers
Added form-input--rounded, form-input--font-ui modifiers

--- a/src/components/shared/Input/index.scss
+++ b/src/components/shared/Input/index.scss
@@ -8,4 +8,11 @@
   @include form-control--placeholder;
   @include form-control--focus;
   @include form-control--invalid;
+
+  &--rounded {
+    @include form-input--rounded;
+  }
+  &--font-ui {
+    @include form-input--ui;
+  }
 }
