--- a/src/components/shared/ThemeProvider/index.scss
+++ b/src/components/shared/ThemeProvider/index.scss
@@ -2,7 +2,7 @@
 @import 'styles/variables.scss';
 @import 'styles/mixins/index.scss';
 
-.container {
+.theme-provider {
   position: relative;
   overflow: hidden;
   width: 100%;
