--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,11 @@
 @use 'sass:map';
 @import './functions.scss';
 
-// Layout
+/*
+  Layout
+*/
+
+// Spacings
 $grid-size: px-to-rem(8px);
 $spacing-px-2: 0.25 * $grid-size;
 $spacing-px-4: 0.5 * $grid-size;
@@ -21,9 +25,13 @@ $spacing-px-192: 24 * $grid-size;
 $spacing-px-256: 32 * $grid-size;
 $spacing-px-384: 48 * $grid-size;
 
+// Paddings
 $grid-padding: $spacing-px-20;
 $grid-padding--narrow: $spacing-px-16;
 $grid-optical-compensation: -8.5vh;
+
+// Z-indexes
+$z-index-modal: 1000;
 
 // TODO: продолжить с миксинами (бордеры например, на фокус у меня нет миксина)
 
