--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,6 +29,7 @@ $spacing-px-384: 48 * $grid-size;
 $grid-padding: $spacing-px-20;
 $grid-padding--narrow: $spacing-px-16;
 $grid-optical-compensation: -8.5vh;
+$grid-optical-compensation--s: -4.25vh;
 
 // Z-indexes
 $z-index-modal: 1000;
