--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -6,7 +6,7 @@
   height: 100%;
   @include flex-column;
   @include flex-align-center;
-  @include bg-95;
+  @include bg-white;
 }
 
 .spinner__spinner {
@@ -26,8 +26,8 @@
     bottom: 0;
 
     @include border-radius-full;
-    border: $spacing-px-2 solid map.get($color-gray, 500);
-    border-right-color: #fff;
+    border: $spacing-px-2 solid map.get($color-gray, 200);
+    border-right-color: map.get($color-gray, 800);
     animation: spinner 1.1s infinite linear;
     content: '';
   }
