add 'Page' component
Added 'Page' component;
First steps with the Search Page;
fixed minor errors in selectors;

--- a/src/styles/utility-mixins/_flex.scss
+++ b/src/styles/utility-mixins/_flex.scss
@@ -19,3 +19,11 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin flex-align-bottom {
+  align-items: flex-end;
+}
+
+@mixin flex-align-bottom--col {
+  justify-content: flex-end;
+}
