--- a/src/components/shared/Warning/index.scss
+++ b/src/components/shared/Warning/index.scss
@@ -14,7 +14,7 @@
   @include flex-row;
   @include flex-align-center;
   
-  @include grid-padding;
+  @include grid-padding--hor;
   @include font-ui;
 
   h2 {
