--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -209,3 +209,4 @@ $border-color--danger: map.get($color-danger, 300);
 
 // Border-radius
 $border-radius-small: $spacing-px-4;
+$border-radius-medium: $spacing-px-8;
