--- a/src/styles/utility-mixins/_spacing.scss
+++ b/src/styles/utility-mixins/_spacing.scss
@@ -12,6 +12,19 @@
 @mixin margin-b-64 {margin-bottom: $spacing-px-64}
 @mixin margin-b-96 {margin-bottom: $spacing-px-96}
 
+@mixin margin-t-2 {margin-top: $spacing-px-2}
+@mixin margin-t-4 {margin-top: $spacing-px-4}
+@mixin margin-t-8 {margin-top: $spacing-px-8}
+@mixin margin-t-12 {margin-top: $spacing-px-12}
+@mixin margin-t-16 {margin-top: $spacing-px-16}
+@mixin margin-t-20 {margin-top: $spacing-px-20}
+@mixin margin-t-24 {margin-top: $spacing-px-24}
+@mixin margin-t-32 {margin-top: $spacing-px-32}
+@mixin margin-t-40 {margin-top: $spacing-px-40}
+@mixin margin-t-48 {margin-top: $spacing-px-48}
+@mixin margin-t-64 {margin-top: $spacing-px-64}
+@mixin margin-t-96 {margin-top: $spacing-px-96}
+
 // Paddings
 @mixin padding-none {padding: 0;}
 
