--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -195,6 +195,7 @@ $line-height-16: px-to-rem(16px);
 $line-height-20: px-to-rem(20px);
 $line-height-24: px-to-rem(24px);
 $line-height-28: px-to-rem(28px);
+$line-height-32: px-to-rem(32px);
 
 // Letter-spacing
 $letter-spacing-05: px-to-rem(0.5px);
