FormHeader styling, onClick handler

--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -5,7 +5,7 @@
 .spinner {
   height: 100%;
   @include flex-column;
-  @include flex-align-center;
+  @include flex-align-justify-center;
   @include bg-white;
 }
 
