--- a/src/styles/mixins/_form-control.scss
+++ b/src/styles/mixins/_form-control.scss
@@ -53,7 +53,7 @@
   @include font-ui;
   @include font-size-ui;
   @include font-weight-bold;
-  @include letter-spacing-05;
+  //@include letter-spacing-05;
 }
 
 @mixin form-input--noborder {
