--- a/src/components/shared/FormHeader/index.scss
+++ b/src/components/shared/FormHeader/index.scss
@@ -1,16 +1,22 @@
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
+@import 'styles/mixins/index.scss';
 
 .form-header {
   @include grid-padding-narrow;
   @include bg-primary;
   @include font-ui;
   @include font-size-ui-sm;
+  @include flex-row;
+  @include flex-align-center;
   //@include letter-spacing-05;
+  
   color: #fff;
+}
 
-  // or future button
-  a, button {
-    margin-left: -$spacing-px-2;
-  }
+.form-header__btn {
+  @include margin-r-8;
+  @include button--icon;
+  
+  margin-left: -$spacing-px-2;
 }
