--- a/src/styles/utility-mixins/_typography.scss
+++ b/src/styles/utility-mixins/_typography.scss
@@ -32,6 +32,8 @@
 @mixin line-height-24 {line-height: $line-height-24}
 @mixin line-height-28 {line-height: $line-height-28}
 @mixin line-height-32 {line-height: $line-height-32}
+@mixin line-height-40 {line-height: $line-height-40}
+@mixin line-height-44 {line-height: $line-height-44}
 
 // Letter-spacing
 @mixin letter-spacing-05 {letter-spacing: $letter-spacing-05}
