Renamed PageActions to Controls

--- a/src/components/shared/Controls/index.scss
+++ b/src/components/shared/Controls/index.scss
@@ -1,6 +1,6 @@
 @import 'styles/variables.scss';
 
-.page-actions {
+.controls {
   padding: $spacing-px-24 $grid-padding;
   background-color: var(--gray100);
 }
