--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -189,6 +189,7 @@ $font-family-ui: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', 'Noto Sa
 $font-family-content: 'Merriweather', serif;
 
 // Font-weight
+$font-weight-thin: 200;
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-bold: 600;
