--- a/src/styles/utility-mixins/_border.scss
+++ b/src/styles/utility-mixins/_border.scss
@@ -10,6 +10,10 @@
   border: solid $border-size-1 $border-color--danger;
 }
 
+@mixin border--primary {
+  border: solid $border-size-1 $border-color--primary;
+}
+
 @mixin border-none {
   border: none;
 }
