--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -206,6 +206,7 @@ $font-style-cursive: italic;
 
 // Line-height
 $line-height-12: px-to-rem(12px);
+$line-height-14: px-to-rem(14px);
 $line-height-16: px-to-rem(16px);
 $line-height-20: px-to-rem(20px);
 $line-height-24: px-to-rem(24px);
