--- a/src/styles/utility-mixins/_typography.scss
+++ b/src/styles/utility-mixins/_typography.scss
@@ -71,6 +71,9 @@
 @mixin line-height-12 {
   line-height: $line-height-12;
 }
+@mixin line-height-14 {
+  line-height: $line-height-14;
+}
 @mixin line-height-16 {
   line-height: $line-height-16;
 }
