--- a/src/components/search/ExamplePicker/index.scss
+++ b/src/components/search/ExamplePicker/index.scss
@@ -30,3 +30,18 @@
   @include flex-no-grow;
   padding-left: $spacing-px-8;
 }
+
+.example-picker__empty-text {
+  @include font-ui;
+  @include font-size-ui-sm;
+  @include font-weight-light;
+  @include line-height-20;
+  color: var(--gray800);
+}
+
+.example-picker__empty-title {
+  @include margin-b-4;
+  @include line-height-20;
+  @include font-size-ui-sm;
+  @include font-weight-bold;
+}
