add emptyTitle to VariantPicker

--- a/src/components/search/VariantPicker/index.scss
+++ b/src/components/search/VariantPicker/index.scss
@@ -7,26 +7,32 @@
     @include flex-wrap;
     gap: $spacing-px-12 $spacing-px-16;
   }
-
-  .variant-picker__variant {
-    @include font-content;
-    @include font-size-content;
-    @include line-height-20;
-    @include border-pseudo-b;
-  }
-
-  .variant-picker__variant--selected {
-    @include border-none;
-    @include font-weight-bold;
-    color: var(--primary1000);
-  }
-
-  .variant-picker__empty-text {
-    @include font-ui;
-    @include font-size-ui-sm;
-    @include font-weight-light;
-    @include line-height-20;
-    color: var(--gray800);
-  }
 }
 
+.variant-picker__variant {
+  @include font-content;
+  @include font-size-content;
+  @include line-height-20;
+  @include border-pseudo-b;
+}
+
+.variant-picker__variant--selected {
+  @include border-none;
+  @include font-weight-bold;
+  color: var(--primary1000);
+}
+
+.variant-picker__empty-text {
+  @include font-ui;
+  @include font-size-ui-sm;
+  @include font-weight-light;
+  @include line-height-20;
+  color: var(--gray800);
+}
+
+.variant-picker__empty-title {
+  @include margin-b-4;
+  @include line-height-20;
+  @include font-size-ui-sm;
+  @include font-weight-bold;
+}
