--- a/src/components/search/ExamplePicker/index.scss
+++ b/src/components/search/ExamplePicker/index.scss
@@ -7,6 +7,7 @@
   @include grid-padding-narrow--hor;
   @include border;
   @include border-radius-sm;
+  column-gap: $spacing-px-20;
   background-color: var(--gray100);
 
   &:not(:last-child) {
@@ -28,7 +29,6 @@
 
 .example-picker__action {
   @include flex-no-grow;
-  padding-left: $spacing-px-8;
 }
 
 .example-picker__empty-text {
