--- a/src/components/shared/Button/index.scss
+++ b/src/components/shared/Button/index.scss
@@ -10,6 +10,7 @@
   &--secondary,
   &--tertiary,
   &--link,
+  &--pseudo,
   &--destructive {
     @include font-ui;
     @include font-weight-bold;
