--- a/src/components/search/CropExample/index.scss
+++ b/src/components/search/CropExample/index.scss
@@ -1,23 +1,58 @@
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
 
-.cut-example {
+.crop-example {
   @include flex-column;
   @include flex-align-bottom--col;
   height: 100vh;
 }
 
-.cut-example__content,
-.cut-example__footer {
+.crop-example__content,
+.crop-example__footer {
   @include grid-padding--hor;
   @include bg-white;
 }
 
-.cut-example__content {
-  padding-top: $spacing-px-40;
+.crop-example__content {
+  //padding-top: $spacing-px-40;
+  @include flex-column;
+  min-height: 50vh;
+  text-align: center;
 }
 
-.cut-example__footer {
+.crop-example__sentence {
+  @include flex-grow;
+  @include grid-padding;
+
+  @include flex-row;
+  @include flex-wrap;
+  @include flex-justify-center;
+  @include flex-align-content-center;
+
+  .crop-example__token {
+    @include margin-t-8;
+    @include margin-r-8;
+    @include margin-b-8;
+    @include margin-l-8;
+    @include font-size-content-h2;
+    @include line-height-32;
+
+    &--active {
+      @include font-content;
+      color: var(--gray500);
+      text-decoration: line-through;
+    }
+  }
+}
+
+.crop-example__hint {
+  @include font-size-ui-sm;
+  @include font-weight-light;
+  @include line-height-16;
+  color: var(--gray500);
+}
+
+.crop-example__footer {
   padding-top: $spacing-px-32;
   padding-bottom: $spacing-px-24;
 }
